Bug 428301 - Present Window Effect Should Always Activate
Summary: Present Window Effect Should Always Activate
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-present-windows (other bugs)
Version First Reported In: 5.20.1
Platform: Other Other
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: usability
: 375690 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-10-26 20:40 UTC by Andres Betts
Modified: 2021-02-02 15:01 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andres Betts 2020-10-26 20:40:02 UTC
SUMMARY
In our current version, if System Settings has the Present Windows effect enabled by using a screen corner, the effect works on all windows except when there is only one window.

When there is only one window in the desktop, present windows does not activate.

I feel this behavior should change. There should be an activation even though there is only 1 window on the desktop and even though there are no windows on the desktop.

The reason being because by not activating the effect, we break the predictability of the effect. A user may want to activate it to just see if there are any windows in any screen that are selectable. In large screen arrays, this may be necessary.

At the same time, even if there are no windows on the desktop, the activation should still happen. The background should still turn darker and probably show a message saying "No windows present". That way the user confirms that there are no windows anywhere to present.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2020-10-26 21:06:41 UTC
Yeah, I agree.
Comment 2 Nate Graham 2020-10-26 21:07:36 UTC
*** Bug 375690 has been marked as a duplicate of this bug. ***
Comment 3 Allexus J 2021-01-22 09:08:12 UTC
I agree. Very annoying issue.
Comment 4 Bug Janitor Service 2021-01-25 20:45:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/620
Comment 5 Nate Graham 2021-02-02 15:01:00 UTC
Git commit 57b6091bd58b0ca7a51618cbaea11b8b75983cab by Nate Graham.
Committed on 02/02/2021 at 14:59.
Pushed by ngraham into branch 'master'.

[effects/presentwindows] Activate even if only one window is open

Requested by VDG.
FIXED-IN: 5.22

M  +1    -3    effects/presentwindows/presentwindows.cpp

https://invent.kde.org/plasma/kwin/commit/57b6091bd58b0ca7a51618cbaea11b8b75983cab