[effects/presentwindows] Activate even if only one window is open

Requested by VDG.

BUG: 428301
FIXED-IN: 5.22