effects/presentwindows/presentwindows.cpp
@@ -1606,9 +1606,7 @@ void PresentWindowsEffect::setActive(bool active)
             }
         }
 
-        if (m_motionManager.managedWindows().isEmpty() ||
-                ((m_motionManager.managedWindows().count() == 1) && m_motionManager.managedWindows().first()->isOnCurrentDesktop() &&
-                 (m_ignoreMinimized || !m_motionManager.managedWindows().first()->isMinimized()))) {
+        if (m_motionManager.managedWindows().isEmpty()) {
             // No point triggering if there is nothing to do
             m_activated = false;
 
